--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>log-service</module>
         <module>service-new-order</module>
         <module>common-kafka</module>
+        <module>service-user</module>
+        <module>service-http-ecommerce</module>
+        <module>service-reading-report</module>
     </modules>
 
     <properties>
