--- a/service-http-ecommerce/pom.xml
+++ b/service-http-ecommerce/pom.xml
@@ -9,8 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-fraud</artifactId>
+    <artifactId>service-http-ecommerce</artifactId>
+
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+    </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>9.4.23.v20191118</version>
+        </dependency>
         <dependency>
             <groupId>com.bulvee</groupId>
             <artifactId>common-kafka</artifactId>
@@ -18,10 +28,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
-    </properties>
 
 </project>
