--- a/service-reading-report/pom.xml
+++ b/service-reading-report/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-fraud</artifactId>
+    <artifactId>service-reading-report</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.bulvee</groupId>
